cmake_minimum_required(VERSION 3.27)
project(Baitaphacckerrank)

set(CMAKE_CXX_STANDARD 17)
add_executable(Baitaphacckerrank ch1/main.cpp
        ch1/BasicDataTypes1.cpp
        ch1/Functions.cpp
        all.h
        ch1/arrayintroduction.cpp
        ch1/plusminus.cpp
        ch1/SherlockandArray.cpp
        "ch2/Find Digits .cpp"
        "ch2/Divisible Sum Pairs.cpp"
        ch3/Strings.cpp
        ch3/Staircase.cpp
        "ch3/Time Conversion.cpp"
        "ch3/CamelCase .cpp"
        ch4/test.cpp
        "ch3/HackerRank in a String.cpp"
        "ch3/Caesar Cipher.cpp"
        "ch4/Drawing Book.cpp"
        "ch4/Equalize the Array.cpp"
        ch4/palindromeIndex.cpp
        "ch4/Variable Sized Arrays.cpp"
        "ch4/Mystery Number.cpp"
        "ch4/Between Two Sets .cpp"
        "ch4/Falling Rocks.cpp")
